--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,4 +3,5 @@ encoding//src/main/webapp/admin/bookings.jsp=UTF-8
 encoding//src/main/webapp/admin/cars.jsp=UTF-8
 encoding//src/main/webapp/customer/availableCars.jsp=UTF-8
 encoding//src/main/webapp/customer/myBookings.jsp=UTF-8
+encoding//src/main/webapp/customer/paymentResult.jsp=UTF-8
 encoding/<project>=UTF-8
